feat: :sparkles: i18n support

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@paper-design/shaders-react": "^0.0.57",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fumadocs-core": "15.8.3",
-    "fumadocs-mdx": "12.0.2",
-    "fumadocs-ui": "15.8.3",
+    "fumadocs-core": "file:./packages/fumadocs-core-15.8.4.tgz",
+    "fumadocs-mdx": "12.0.3",
+    "fumadocs-ui": "15.8.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "^19.2.0",
